[gd_scene load_steps=38 format=2]

[ext_resource path="res://Assets/Sprites/Player_Flight.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Player_Idle.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Arrow.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Wing_Flap.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sprites/Player_Fall.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Player_Bonk.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Floor_Bonk.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sound/flap.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sound/bonk.wav" type="AudioStream" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "flap",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 8 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 7 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 7 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "floor_bonk",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "bonk",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "flight",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 216, 248 )
script = ExtResource( 5 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 12, 2 )
scale = Vector2( 0.6, 0.6 )
z_index = -1
frames = SubResource( 9 )
animation = "idle"
frame = 1
playing = true
flip_h = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 7.45058e-08, -1.90735e-06 )
z_index = -1
frames = SubResource( 27 )
animation = "flight"
frame = 1
playing = true
flip_h = true

[node name="Hitbox" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -16, -8, -8, -8, 16, 8, 16, 8, -8 )

[node name="up" type="RayCast2D" parent="."]
position = Vector2( 0, -17 )
enabled = true
cast_to = Vector2( 9, 0 )
collision_mask = 2

[node name="dw" type="RayCast2D" parent="."]
position = Vector2( 0, 17 )
enabled = true
cast_to = Vector2( 9, 0 )
collision_mask = 2

[node name="Arrow" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
offset = Vector2( 0, -32 )

[node name="flap_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -6.0

[node name="bonk_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -6.0
mix_target = 2
